--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
 } */
 
 .btn-contact {
-    background-color: #CFA13F;
+    background-color: #c9972e;
     color: #0C1A2B;
     text-decoration: none;
     padding: 5px 20px;
@@ -494,9 +494,10 @@ hr {
 
 .logos {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-around;
     flex-wrap: wrap;
-    padding: 0 80px;
+    /* padding: 0 80px; */
+    gap:20px;
     margin-bottom: 60px;
 }
 
@@ -989,10 +990,13 @@ hr {
     margin-right: 25px !important;
     color: #c9972e;
 }
-
+.cobtact-form-container{
+flex: 1.2;
+padding: 0 40px;
+}
 /* Right Side */
 .contact-form {
-    flex: 1.2;
+    
     background-color: #0b1a33;
     padding: 30px;
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -1226,6 +1230,9 @@ hr {
     }
          .contact-container {
              flex-direction: column-reverse;
+         }
+         .cobtact-form-container{
+            padding: 0px;
          }
     
          .contact-form,
